[gd_scene load_steps=2 format=2]

[ext_resource path="res://MainMenu/Settings/Buttons/ResolutionSlider/ResolutionSelector.gd" type="Script" id=1]

[node name="ResolutionSelector" type="HBoxContainer"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_top = 13.0
margin_right = 68.0
margin_bottom = 27.0
text = "Resolution"

[node name="Control" type="Control" parent="."]
margin_left = 72.0
margin_right = 72.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionButton" type="OptionButton" parent="."]
margin_left = 76.0
margin_right = 168.0
margin_bottom = 40.0
text = "1280x720"
items = [ "1280x720", null, false, 0, null, "1920x1080", null, false, 1, null, "640x360", null, false, 2, null, "1366x768", null, false, 3, null ]
selected = 0

[connection signal="item_focused" from="OptionButton" to="." method="_on_OptionButton_item_focused"]
[connection signal="item_selected" from="OptionButton" to="." method="_on_OptionButton_item_selected"]
[connection signal="pressed" from="OptionButton" to="." method="_on_OptionButton_pressed"]
